# RaftKV-StrongConsistency

./: .gitignore  CMakeLists.txt  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  common.cmake  server.cc
client/: kv_client.cc
config/: node1.yaml  node2.yaml  node3.yaml
docs/: benchmark.md  build_alinux3.md  design.md  fault_recovery.md  raft_flow.md  server_validation.md  test_result.md
include/common/: config.h
include/kv/: kv_command.h  kv_server.h  kv_state_machine.h
include/storage/: file_util.h  snapshot.h  wal.h
proto/: README.md
scripts/: benchmark.sh  build.sh  chaos_test.sh  check_consistency.sh  kill_leader.sh  restart_node.sh  start_cluster.sh  stop_cluster.sh
src/common/: config.cc
src/craft/: raft.h
src/craft/persist/: abstractPersist.h
src/craft/utils/: timer.h
src/kv/: kv_command.cc  kv_server.cc  kv_state_machine.cc
src/raft/: TransferSnapShotFileRpc.cc  abstractPersist.cc  appendEntiesRpc.cc  coAppendEntries.cc  coApplyLogs.cc  installSnapShotRpc.cc  raft.cc  userInterFace.cc  voteRpc.cc
src/rpc/: raft.grpc.pb.cc  raft.grpc.pb.h  raft.pb.cc  raft.pb.h
src/storage/: file_util.cc  snapshot.cc  wal.cc
tests/: test_kv_state_machine.cc  test_raft_log.cc  test_restart_replay.cc  test_snapshot.cc  test_wal.cc
